01. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- menu height fixed
	- regression on repaint commwidget fixed
	- save position and size of content dialog added
	- save position and size of comment/category dialog added

31. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- q3gridlayout replaced by qgridlayout
	- q3ptrlist replaced by qlist
	- q3multilinedit replaced by qtextedit
	- q3valuelist replaced by qlist
	- q3hboxlayout replaced by qhboxlayout
	- q3vboxlayout replaced by qvboxlayout
	- mainwidget now uses qmainwidget as base class
	- custom toolbar replaced by qmainwidget toolbar (this allows to undock it from mainwidget and let the user move to other place
	- qtoolbuttons replaced by qaction in qtoolbar
	- q3listbox replaced by qlistwidget
	- q3buttongroup replaced by qgroupbox
	- q3groupbox replaced by qgroupbox

28. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- touch function of DBCatalog moved to proper place
	- empty contents after first edit file node content fixed (#3492344)
	- size optimizions on finddialog
	- option for keeping search result at finddialog added (#3496361)
	- display avi scan info only if avi tech scan is performed
	- scan only for media info if file has supported extension
	- identical media name check at addialog fixed
	- identical media name check for cd/dvd added
	- skip mount cd/dvd if already mounted is detected (via /etc/mtab)
	- version increased to 1.9

27. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- allow gui often to refresh
	- only create exif data if its enabled to read exif data
	- status support on rescan event added
	- animate systray icon during scanning added
	- allow to maximize find dialog added
	- hide progress dialog on minimize to tray too
	- allow to faster cancel on scanning
	- hide trayicon before close app

26. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- strip useless trailing slash from selected path on adddialog
	- set last dir name as media name if type is not cd/dvd