@@ -266,6 +266,19 @@ using namespace std;
 QString parseAviHeader ( FILE* file ) {
     long filelength=0;
 
+    infoList.IART= NULL;
+    infoList.ICMT= NULL;
+    infoList.ICOP= NULL;
+    infoList.ICRD= NULL;
+    infoList.IENG= NULL;
+    infoList.IGNR= NULL;
+    infoList.INAM= NULL;
+    infoList.IPRD= NULL;
+    infoList.ISFT= NULL;
+    infoList.ISRC= NULL;
+    infoList.ISBJ= NULL;
+    infoList.ITHC= NULL;
+
     fseek ( file, 0L, SEEK_END );
     filelength=ftell ( file );
     rewind ( file ); /*fseek(stream, 0L, SEEK_SET);*/
